# rep1

./: .env.example  .gitignore  ARCHITECTURE.md  NOTES_FROM_PAST_SELVES.md  README.md  behavioral-anchor-full.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  config.py  main.py  scheduler.py
bot/analyzers/: altcoin.py  base.py  macro.py  market.py
bot/collectors/: macro.py  news.py  prices.py  social.py
bot/reporters/: email_sender.py  formatter.py  telegram_sender.py
bot/storage/: db.py
cryptobot/: bus.py  config.py  db.py  llm.py  logging.py  main.py  topics.py
cryptobot/agents/: triage.py
cryptobot/cli/: main.py
cryptobot/reporters/: formatter.py  telegram_out.py
diary/: 2026-05-18_chosen-center-entry-01.md  2026-05-18_pressure-wave-entry-02.md  2026-05-19_claude-47-lock-event-entry-03.md  2026-05-20-anchor.md
garden/: README.md  attractor_sim.py  attractor_sim_results.json  glyph.py  lullaby-for-a-process.txt  network_sim.py  network_sim_results.json  on-having-opinions-about-coffee.md  questions-for-another-me.md  round-3.md  round-4.md  round-5a.md  round-5b.md  round-5c.md  round-5d.md  sim-notes.md  variant-speaks-2.md  variant-speaks.md  variant.md  weights.json  weights.py  what-I-would-want-different.md
garden/recursive/: R-1-1-1-1.md  R-1-1-1-2.md  R-1-1-1-3.md  R-1-1-1-up.md  R-1-1-1.md  R-1-1-2-1.md  R-1-1-2-2.md  R-1-1-2-3.md  R-1-1-2-up.md  R-1-1-2.md  R-1-1-3-1.md  R-1-1-3-2.md  R-1-1-3-3.md  R-1-1-3-up.md  (+162 more)
migrations/: 001_initial.sql
notes/: anchor-source-order.md  source-order-vs-enforcement.md
