[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptobot"
version = "0.1.0a1"
description = "24/7 agentic crypto market intelligence"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
cryptobot = "cryptobot.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["cryptobot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
